--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -19,8 +19,8 @@
       // Use the 'v' parameter to indicate the version to use (weekly, beta, alpha, etc.).
       // Add other bootstrap parameters as needed, using camel case.
     });
-  </script>
-  <title>The Paw</title> -->
+  </script> -->
+  <title>The Paw</title>
 </head>
 
 <body>
