--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -12,6 +12,15 @@
   <script src="https://kit.fontawesome.com/3bdae81422.js" crossorigin="anonymous"></script>
   <!-- <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbMCWbhZBpVfKkdp8hqP5X6tt3BQMAdpo&loading=async">
   </script> -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-C83R9XSSKW"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-C83R9XSSKW');
+  </script>
   <script>
     (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); r.add("places"); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
       key: "AIzaSyBbMCWbhZBpVfKkdp8hqP5X6tt3BQMAdpo",
